--- a/webapp/rust/Cargo.toml
+++ b/webapp/rust/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = "0.3.5"
+sqlx = { version="0.3", default-features = false, features = ["runtime-tokio", "mysql"] }
 reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
-actix-web = "2.0.0"
+actix-web = "2.0"
+anyhow = "1.0"
+actix-rt = "1.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
